2022-03-18 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCicode.c,
	  src/SDCCsymt.c,
	  src/stm8/gen.c,
	  src/z80/gen.c,
	  support/regression/tests/bug-3359.c,
	  support/regression/tests/structparam.c,
	  .version,
	  doc/sdccman.lyx:
	  Fix bug #3359 and implement struct / union parameters for stm8, z80 and related (and for pdk with --stack-auto), RFE #23.

2022-03-16 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Refactor genAnd(), genOr() and genXor().

2022-03-16 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix access before array.
	* support/regression/tests/gcc-torture-execute-20020206-1.c,
	  support/regression/tests/gcc-torture-execute-20050713-1.c,
	  support/regression/tests/gcc-torture-execute-20071210-1.c,
	  support/regression/tests/gcc-torture-execute-20131127-1.c,
	  support/regression/tests/gcc-torture-execute-20170401-1.c,
	  support/regression/tests/gcc-torture-execute-20171008-1.c,
	  support/regression/tests/gcc-torture-execute-pr60017.c,
	  support/regression/tests/gcc-torture-execute-pr82387.c,
	  support/regression/tests/gcc-torture-execute-pr82388.c:
	  Update reasons why we skip some gcc tests.
	* device/include/uchar.h,
	  src/SDCCval.c:
	  In C23, u8-prefixed string literals are arrays of char8_t, a typedef for unsigned char. RFE #779.

2022-03-16 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* support/regression/Makefile.in,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/ez80-z80/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk,
	  support/regression/ports/pdk13/spec.mk,
	  support/regression/ports/pdk15/spec.mk,
	  support/regression/ports/pdk15-stack-auto/spec.mk,
	  support/regression/ports/stm8/spec.mk,
	  support/regression/ports/ucz180/spec.mk,
	  support/regression/ports/ucz180-resiy/spec.mk,
	  support/regression/ports/ucz80-nmos/spec.mk,
	  support/regression/ports/ucz80n/spec.mk: